add functions to get user info and friends list

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -104,6 +104,7 @@ user logs in w instagram
                     }
                 }
 
+
             function getLocation(){
                 $.get("https://ipinfo.io", function(response) {
                     var location = response.loc;
@@ -118,13 +119,38 @@ user logs in w instagram
                     dataType: "jsonp"
                 })
                 .done(function(response) {
-                    console.log(response);
-                    // if this user ID exists in the DB
-                    // update friends list
-                    // else create new user w name, handle, friends list
+                    //console.log(response);
+                    updateUser(response.data);
                 });
             }
+            function updateUser(dataFromIg){
+                console.log(dataFromIg);
+                // if no user exists with this id
+                // add a new user with this ID, name, handle, friends list
+                var user = {
+                    name: dataFromIg.full_name,
+                    id: dataFromIg.id,
+                    username: dataFromIg.username,
+                    profilePicture: dataFromIg.profile_picture
+                };
+                // else check to see if name, username, profile_picture changed
 
+                // for all: update friends list: getOwnFriends(token, userID)
+            }
+            function getOwnFriends(token, userID){
+                 $.ajax({
+                    url: endpoint + "/users/self/follows?" + "access_token=" + token,
+                    method: 'GET',
+                    dataType: "jsonp"
+                })
+                .done(function(response) {
+                    console.log(response);
+                    updateFriendList(response.data, userID);
+                });
+            }
+            function updateFriendList(dataFromIg){
+                console.log(dataFromIg);
+            }
             function getFriendsImages(token, latitude, longitude){
             }
 
