--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -134,7 +134,17 @@ user logs in w instagram
                 // check to see if user exists with this id
                 var userExists = false;
                 database.ref("users").once('value', function(snapshot) {
-                    var users = snapshot.val();
+                    //var users = snapshot.val();
+
+                    snapshot.forEach(function(childSnapshot) {
+                        var key = childSnapshot.key;
+                        var childData = childSnapshot.val();
+                        console.log(key + ": " + childData);
+                    });
+
+/*
+
+
                     for (user in users){
                         if (user.id && user.id == dataFromIg.id){
                             userExists = true;
@@ -147,6 +157,7 @@ user logs in w instagram
                         console.log("adding new");
                         database.ref("users").push(user);
                     }
+    */
                 });
                 // for all: update friends list
                 //getOwnFriends(dataFromIg.id);
