changed to haschild

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -138,7 +138,7 @@ user logs in w instagram
 
                     snapshot.forEach(function(childSnapshot) {
                         //var key = childSnapshot.key;
-                        if (childSnapshot.child(id).exists()){
+                        if (childSnapshot.hasChild(id)){
                             var childData = childSnapshot.child(id);
                             console.log(childData);
                         }
