testing get frieds images

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -81,6 +81,6 @@ user logs in w instagram
             };
             firebase.initializeApp(config);
         </script>
-        <script src="assets/javascript/instagram.js"
+        <script src="assets/javascript/instagram.js"></script>
 </body>
 </html>
