--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         
             <main class="mdl-layout__content">
                  <div class="page-content">
+                     <!-- city input for centering map -->
+                    <div id="floating-panel">
+                        <input id="address" type="textbox" value="Los Angeles, California">
+                        <input id="submit" type="button" value="Center Map">
+                    </div>
+                    <!-- map -->
                     <div id="map"></div>
                     <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="addrestaurant">
                         <i class="material-icons">add</i> 
@@ -109,8 +115,7 @@
         <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
         <script src="assets/javascript/firebase.js"></script>
         <!-- google maps scripts-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbclTHvLjlpEPMK_xC5wHJdyvozSb_Cz0&callback=initMap"
-        async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbclTHvLjlpEPMK_xC5wHJdyvozSb_Cz0&callback=initMap" async defer></script>
         <script src="assets/javascript/map.js"></script>
         
     </body>
