switching to use shared DB

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -83,13 +83,15 @@ restaurants
 
 
 
-*/
+
 -->
 
 
             <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+            <script src="assets/javascript/firebase.js"></script>
             <script lang="javascript">
             // Initialize Firebase
+            /*
             var config = {
                 apiKey: "AIzaSyDiSNDLvK_AyIdGq7V-AvLjtdWTSNWvl98",
                 authDomain: "thatsmyjam-harold.firebaseapp.com",
@@ -98,6 +100,7 @@ restaurants
                 messagingSenderId: "682404928881"
             };
             firebase.initializeApp(config);
+            */
         </script>
         <script src="assets/javascript/instagram.js"></script>
 </body>
