--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         
             <main class="mdl-layout__content">
                  <div class="page-content">
-                     <!-- city input for centering map -->
+                    <!-- city input for centering map -->
                     <div id="floating-panel">
                         <input id="address" type="textbox" value="Los Angeles, California">
-                        <input id="submit" type="button" value="Center Map">
+                        <input id="submit" type="button" value="Change Location">
                     </div>
                     <!-- map -->
                     <div id="map"></div>
