--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -41,57 +41,11 @@
             </div>
         </div>
         
-<!--
-/*
-program flow:
-
-user logs in w instagram
-    look up their IG username in our DB of users, add if new
-    retrieve their friends list from IG
-        add / update in our DB on their user object
-    get their friends' reviews and photos from the DB
-        populate the map w friends reviews
-    check IG to see if there are new photos from their friends
-        update the DB with new reviews
-        update the map
-    check to see if they have new instagram photos with the hashtag
-        add new photos to our DB as reviews
-        prompt them to add text reviews to the photos
-        if any tagged photos are missing location information, prompt them to add it, possibly from google places data
-
-
-    all users
-        have map ready to filter displayed reviews by author
-        have map ready to add a new review from the map button
-            when adding a new review, is it possible to use the instagram api to add a new photo???
-        have app ready to change the location of the map
-
-
-
-restaurants
-    name:
-    lat:
-    lng:
-    address:
-    id: ??
-    reviews
-        thumb: ("up" "down" false for not set)
-        author: (ID of user who created it)
-        text:
-        instagramID:
-        image: 
-
-
-
-
--->
-
-
-            <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
-            <script src="assets/javascript/firebase.js"></script>
-            <script lang="javascript">
+        <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+        <script src="assets/javascript/firebase.js"></script>
+        <script lang="javascript">
             // Initialize Firebase
-            /*
+            /* this is my test DB, commenting out and switching over to our shared DB
             var config = {
                 apiKey: "AIzaSyDiSNDLvK_AyIdGq7V-AvLjtdWTSNWvl98",
                 authDomain: "thatsmyjam-harold.firebaseapp.com",
