finishing review page and friends list function, need help tying to instagram.js

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
-                    <span class="mdl-layout-title">That's My Jam</span>
+                    <span class="mdl-layout-title"><a href="index.html" id="titlelink">That's My Jam</a></span>
                     <!-- Add spacer, to align navigation to the right -->
                     <div class="mdl-layout-spacer"></div>
                     <!-- Navigation. We hide it in small screens. -->
                     <nav class="mdl-navigation mdl-layout--large-screen-only">
-                        <a class="mdl-navigation__link"  href="">Add a Review</a>
+                        <a class="mdl-navigation__link"  href="restaurant.html">Add a Review</a>
                         <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review&response_type=token&scope=follower_list+public_content">Login</a>
                         <a class="mdl-navigation__link"  href="">Sign up</a>
                     </nav>
@@ -39,9 +39,9 @@
             <div class="mdl-layout__drawer">
                 <span class="mdl-layout-title">That's My Jam</span>
                 <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="">Login</a>
+                    <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review&response_type=token&scope=follower_list+public_content">Login</a>
                     <a class="mdl-navigation__link" href="">Sign up</a>
-                    <a class="mdl-navigation__link" href="">Contact</a>
+                    <a class="mdl-navigation__link" href="restaurant.html">Add a Restaurant</a>
                     <a class="mdl-navigation__link" href="">About Us</a>
                 </nav>
             </div>
