--- a/restaurant.html
+++ b/restaurant.html
@@ -81,7 +81,15 @@
                                                 <input class="mdl-textfield__input" type="text" id="phone" />
                                                 <label class="mdl-textfield__label" for="phone">Phone</label>
                                             </div>
-                                            <div class="mdl-layout-spacer"></div>
+                                            <div class="">
+                                                Thumbs up or down?
+                                                <button class="mdl-button mdl-js-button mdl-button--icon" id="thumbup">
+                                                <i class="material-icons">thumb_up</i>
+                                                </button>
+                                                <button class="mdl-button mdl-js-button mdl-button--icon" id="thumbdown">
+                                                <i class="material-icons">thumb_down</i>
+                                                </button>
+                                            </div>
                                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="textboxlength">
                                                 <textarea class="mdl-textfield__input" type="text" id="review" rows="5"></textarea>
                                                 <label class="mdl-textfield__label" for="review">Review</label>
