--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -18,6 +18,36 @@
             color: white;
             font-weight: bold;
         }
+
+
+    /*modal styles*/
+    .modalContainer{
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .modalBackground{
+        position: absolute;
+        top:0;
+        left: 0;
+        background-color: black;
+        opacity: .8;
+        width: 100%;
+        height: 100%;
+    }
+    .modalContent{
+        margin: auto;
+        width: 45%;
+    }
+    .reviewSubmit{
+
+    }
+    button.reviewCancel{
+
+    }
+
     </style>
 </head>
 
