moved app.js to after ig,js

--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
         
         <!-- jquery link -->
         <script  src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-        <!-- main front-end script -->
-        <script src="assets/javascript/app.js"></script>
         <!-- firebase scripts -->
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
         <script src="assets/javascript/firebase.js"></script>
@@ -102,6 +100,8 @@
         <script src="assets/javascript/map.js"></script>
         <!-- instagram integration script -->
         <script src="assets/javascript/instagram.js"></script>
+        <!--  front-end script -->
+        <script src="assets/javascript/app.js"></script>
         
     </body>
 </html>
