integrating IG login with map marker creation

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -6,6 +6,7 @@
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
     <meta charset="utf-8">
     <style>
         #title, #main{      
@@ -41,11 +42,12 @@
         margin: auto;
         width: 45%;
     }
-    .reviewSubmit{
-
+    img.brand{
+        float: left;
     }
-    button.reviewCancel{
-
+    h1.brand{
+        font-family: "Permanent Marker";
+        color: rgb(103,58,183);
     }
 
     </style>
@@ -54,7 +56,8 @@
 <body>
     <div class="container">
         <div class="jumbotron" id="title">
-            <h1>#thatsmyjam</h1>
+            <img class="brand" src="assets/images/thatsmyjamlogo-150.png" border="0" alt="#thatsmyjam logo">
+            <h1 class="brand">#thatsmyjam</h1>
         </div>
 
         <div class="panel panel-default">
