Bill fix on location change and google map url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <form action="#">
                             <div class="mdl-textfield mdl-js-textfield" id="address-div">
                                 <input class="mdl-textfield__input" type="text" id="address">
-                                <label class="mdl-textfield__label" for="address" id="address-label">Los Angeles, CA</label>
+                                <label class="mdl-textfield__label" for="address" id="address-label"></label>
                             </div> 
                             <button class="mdl-button mdl-js-button" id="submit" type="button">
                                 Change Location
@@ -88,7 +88,7 @@
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
         <script src="assets/javascript/firebase.js"></script>
         <!-- google maps scripts-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtu_MMhMD6Ss_EH4Ol-gidM9fRcePTO0M" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtu_MMhMD6Ss_EH4Ol-gidM9fRcePTO0M&callback=initMap" async defer></script>
         <script src="assets/javascript/map.js"></script>
         <!-- instagram integration script -->
         <script src="assets/javascript/instagram.js"></script>
