added privacy policy, removed files no longer used

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <!--Footer-->
                     <footer class="mdl-mini-footer">
                         <div class="mdl-mini-footer__left-section" id="footerid">
-                            <div class="mdl-logo">TMJ All Rights Reserved</div>
+                            <div class="mdl-logo">#thatsmyjam All Rights Reserved</div>
                             <ul class="mdl-mini-footer__link-list">
                                 <li><a href="https://www.youtube.com/watch?v=yWP6Qki8mWc">Help</a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/Privacy">Privacy & Terms</a></li>
+                                <li><a href="privacy.html">Privacy & Terms</a></li>
                             </ul>
                         </div>
                     </footer>
