--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="mdl-layout-spacer"></div>
                     <!-- Navigation. We hide it in small screens. -->
                     <nav class="mdl-navigation mdl-layout--large-screen-only">
-                        <a class="mdl-navigation__link"  href="restaurant.html">Add a Review</a>
+                        <a class="mdl-navigation__link add-review-link">Add a Review</a>
                         <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review&response_type=token&scope=follower_list+public_content">Login</a>
                     </nav>
                     
@@ -53,8 +53,8 @@
             <div class="mdl-layout__drawer">
                 <span class="mdl-layout-title">That's My Jam</span>
                 <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://billbitt.github.io/project-1-friends-restaurant-review/&response_type=token&scope=follower_list+public_content">Login</a>
-                    <a class="mdl-navigation__link" href="restaurant.html">Add a Restaurant</a>
+                    <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/&response_type=token&scope=follower_list+public_content">Login</a>
+                    <a class="mdl-navigation__link add-review-link">Add a Review</a>
                     <a class="mdl-navigation__link" href="http://www.imdb.com/title/tt0118884/">Contact</a>
                     <a class="mdl-navigation__link" href="http://blog.hubspot.com/marketing/remarkable-about-us-page-examples">About Us</a>
                 </nav>
