--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <!-- Navigation. We hide it in small screens. -->
                     <nav class="mdl-navigation mdl-layout--large-screen-only">
                         <a class="mdl-navigation__link add-review-link" href="#">Add a Review</a>
-                        <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review&response_type=token&scope=follower_list+public_content">Login</a>
+                        <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/thatsmyjam/&response_type=token&scope=follower_list+public_content">Login</a>
                     </nav>
                     
                     <!--<div class="material-icons mdl-badge" id="notif" data-badge="10">people_outline</div>-->
@@ -53,7 +53,7 @@
             <div class="mdl-layout__drawer">
                 <span class="mdl-layout-title">That's My Jam</span>
                 <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/&response_type=token&scope=follower_list+public_content">Login</a>
+                    <a class="mdl-navigation__link" href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/thatsmyjam/&response_type=token&scope=follower_list+public_content">Login</a>
                     <a class="mdl-navigation__link add-review-link" href="#">Add a Review</a>
                     <a class="mdl-navigation__link" href="http://www.imdb.com/title/tt0118884/">Contact</a>
                     <a class="mdl-navigation__link" href="http://blog.hubspot.com/marketing/remarkable-about-us-page-examples">About Us</a>
